feat: 执行代码生成，生成environment，sleep,todo,recommendation,vip等实体代码，并创建dream-module模块用来存放业务逻辑 chore：代码生成器生成代码放于目录中

--- a/dream-admin/pom.xml
+++ b/dream-admin/pom.xml
@@ -61,6 +61,13 @@
             <artifactId>dream-generator</artifactId>
         </dependency>
 
+        <!-- 业务内容-->
+        <dependency>
+            <groupId>com.dream</groupId>
+            <artifactId>dream-module</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
