feat: 新增dream-ai模块，基于deepseek的模型对话

--- a/dream-admin/pom.xml
+++ b/dream-admin/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>dream-module</artifactId>
         </dependency>
 
+        <!-- ai模型-->
+        <dependency>
+            <groupId>com.dream</groupId>
+            <artifactId>dream-ai</artifactId>
+        </dependency>
+
 
     </dependencies>
 
