--- a/dream-admin/pom.xml
+++ b/dream-admin/pom.xml
@@ -39,8 +39,8 @@
 
          <!-- Mysql驱动包 -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
         </dependency>
 
         <!-- 核心模块-->
@@ -71,6 +71,12 @@
         <dependency>
             <groupId>com.dream</groupId>
             <artifactId>dream-ai</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-core</artifactId>
+            <version>1.0.0-M6</version>
+            <scope>compile</scope>
         </dependency>
 
 
