--- a/dream-admin/src/main/resources/application.yml
+++ b/dream-admin/src/main/resources/application.yml
@@ -65,28 +65,39 @@ spring:
     restart:
       # 热部署开关
       enabled: true
-  # redis 配置
-  redis:
-    # 地址
-    host: localhost
-    # 端口，默认为6379
-    port: 6379
-    # 数据库索引
-    database: 6
-    # 密码
-    password: 123456
-    # 连接超时时间
-    timeout: 10s
-    lettuce:
-      pool:
-        # 连接池中的最小空闲连接
-        min-idle: 0
-        # 连接池中的最大空闲连接
-        max-idle: 8
-        # 连接池的最大数据库连接数
-        max-active: 8
-        # #连接池最大阻塞等待时间（使用负值表示没有限制）
-        max-wait: -1ms
+  data:
+    # redis 配置
+    redis:
+      # 地址
+      host: localhost
+      # 端口，默认为6379
+      port: 6379
+      # 数据库索引
+      database: 6
+      # 密码
+      password: 123456
+      # 连接超时时间
+      timeout: 10s
+      lettuce:
+        pool:
+          # 连接池中的最小空闲连接
+          min-idle: 0
+          # 连接池中的最大空闲连接
+          max-idle: 8
+          # 连接池的最大数据库连接数
+          max-active: 8
+          # #连接池最大阻塞等待时间（使用负值表示没有限制）
+          max-wait: -1ms
+  #ai相关配置
+  ai:
+    openai:
+      api-key: sk-ab49dee76f4b44d3b26ba235f551b378
+      base-url: https://api.deepseek.com
+      chat:
+        options:
+          model: deepseek-reasoner
+      embedding:
+        enabled: false
 
 # token配置
 token:
@@ -128,13 +139,3 @@ xss:
   # 匹配链接
   urlPatterns: /system/*,/monitor/*,/tool/*
 
-#ai相关配置
-ai:
-    openai:
-      api-key: sk-ab49dee76f4b44d3b26ba235f551b378
-      base-url: https://api.deepseek.com
-      chat:
-        options:
-          model: deepseek-reasoner
-      embedding:
-        enabled: false
