--- a/dream-admin/src/main/resources/application.yml
+++ b/dream-admin/src/main/resources/application.yml
@@ -123,12 +123,24 @@ pagehelper:
   supportMethodsArguments: true
   params: count=countSql
 
-# Swagger配置
-swagger:
-  # 是否开启swagger
-  enabled: true
-  # 请求前缀
-  pathMapping: /dev-api
+## Swagger配置
+#swagger:
+#  # 是否开启swagger
+#
+#  # 请求前缀
+
+# knife4j的增强配置，不需要增强可以不配
+knife4j:
+  enable: true    # 开启knife4j,无需添加@EnableKnife4j注解
+  setting:
+    language: zh_cn   #中文
+    swagger-model-name: 实体列表   #默认为: Swagger Models
+  basic: # 开启Swagger的Basic认证功能,默认是false
+    enable: true
+    username: admin
+    password: 123456
+
+
 
 # 防止XSS攻击
 xss:
