--- a/dream-common/pom.xml
+++ b/dream-common/pom.xml
@@ -138,6 +138,18 @@
             <version>2.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.38</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
